# streambreak

./: .gitignore  AGENTS.md  README.ko.md  README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
Formula/: streambreak.rb
scripts/: bump-version.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  timer.rs  tray.rs  window.rs
src-tauri/src/cli/: init.rs
src-tauri/src/content/: cache.rs  mod.rs  rotation.rs  rss.rs
src/__tests__/: Controls.test.tsx  NewsCard.test.tsx  setup.ts
src/components/: CompleteBanner.tsx  Controls.tsx  MiniGame.tsx  NewsCard.tsx  ProgressBar.tsx
src/games/: Gomoku.tsx  MemoryMatch.tsx  Minesweeper.tsx
src/styles/: globals.css
