[package]
name = "streambreak"
version = "0.2.1"
edition = "2021"

[lib]
name = "streambreak_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "streambreak"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
feed-rs = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
